feat: add file explorer for docker & redesign settings files (#189)
* feat: add file explorer for docker & redesign settings saves + external-pkms

* feat: update file-explorer design & icons

* chore: improve path management
